fix: remove horizontal scroll on search resize

--- a/static/styles.css
+++ b/static/styles.css
@@ -177,9 +177,10 @@ li {
 }
 
 .search-dropdown {
+    position: absolute;
     border-radius: 4px;
     background-color: white;
-    position: absolute;
+    width: 100%;
 }
 
 .search-footer {
@@ -191,7 +192,7 @@ li {
     .search-dropdown {
         left: 50%;
         transform: translateX(-50%);
-        width: 600px;
+        max-width: 560px;
     }
 }
 
@@ -227,7 +228,7 @@ li {
 
 @media (min-width: 600px) {
     .search-field {
-        max-width: 600px;
+        max-width: 560px;
     }
 }
 
@@ -471,7 +472,13 @@ hr {
     column-gap: 0.5rem;
     row-gap: 0.25rem;
     border-radius: var(--border-radius);
-    padding: 1.25rem;
+    padding: 0.5rem;
+}
+
+@media (min-width: 600px) {
+    .dictionary-entries {
+        padding: 1.25rem;
+    }
 }
 
 .entry-article {
